<resources>
    <string name="app_name">IndividuaProject</string>
    <string name="start_walking">Start Walking</string>
    <string name="my_sport_app">MY SPORT APP</string>
    <string name="history">History</string>
    <string name="activities">Activities</string>
    <string name="activitey_page">Activitey Page</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="rest">rest</string>
    <string name="save">save</string>
    <string name="activity_page" />
    <string name="activity_Page">list of activity</string>
</resources>