<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#828181"
    tools:context=".StartWalking">

    <Button
        android:id="@+id/button4"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:backgroundTint="#212B37"
        android:onClick="start"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/button"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:backgroundTint="#212B37"
        android:text="@string/pause"
        android:onClick="pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/button2"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:backgroundTint="#212B37"
        android:text="@string/rest"
        android:onClick="rest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/save"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:backgroundTint="#212B37"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.554" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        android:textSize="24pt"
        android:layout_gravity="center"
        android:id="@+id/txtTime"/>

</androidx.constraintlayout.widget.ConstraintLayout>